<resources>
    <string name="app_name">OnBoardingAnimation</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="page_one_msg_title">LOREM IPSUM</string>
    <string name="page_one_msg_one">lorem ipsum lorem ipsum lorem ipsum</string>
    <string name="page_one_msg_two">lorem ipsum lorem ipsum</string>
    <string name="page_one_msg_three">lorem ipsum.</string>

    <string name="page_two_msg_title">LOREM IPSUM</string>
    <string name="page_two_msg_one">lorem ipsum lorem ipsum lorem ipsum</string>
    <string name="page_two_msg_two">lorem ipsum lorem ipsum</string>
    <string name="page_two_msg_three">lorem ipsum.</string>

    <string name="page_three_msg_title">LOREM IPSUM</string>
    <string name="page_three_msg_one">lorem ipsum lorem ipsum lorem ipsum</string>
    <string name="page_three_msg_two">lorem ipsum lorem ipsum</string>
    <string name="page_three_msg_three">lorem ipsum.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
