<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:test="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <ImageView
        android:id="@+id/thirdElements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/page_three_elements_top"
        android:src="@drawable/third_elements" />

    <com.onboardinganimation.onboardlib.MovableView
        android:id="@+id/phoneIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:alpha="1"
        android:tag="phoneIconTag"
        test:endX_center_horizontal="true"
        test:startX_left="true"
        test:startY="@dimen/page_three_phone_startY"
        test:endY="@dimen/page_three_phone_endY"
        test:image="@drawable/call_support"
        test:show_layout_dev="false"
         />

    <com.onboardinganimation.onboardlib.MovableView
        android:id="@+id/chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="1"
        test:dev_layout_height="@dimen/movable_height"
        test:dev_layout_width="@dimen/movable_width"
        test:endX="@dimen/page_three_chat_endX"
        test:endY="@dimen/page_three_chat_endY"
        test:image="@drawable/third_chat"
        test:show_layout_dev="false"
        test:startX_right="true"
        test:startY_top="true" />

    <com.onboardinganimation.onboardlib.MovableView
        android:id="@+id/pinIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="1"
        android:tag="pinIcon"
        test:dev_layout_height="@dimen/movable_height"
        test:dev_layout_width="@dimen/movable_width"
        test:endX="@dimen/page_three_pin_endX"
        test:endY="@dimen/page_three_pin_endY"
        test:image="@drawable/third_pin"
        test:show_layout_dev="false"
        test:startX_left="true"
        test:startY_bottom="true" />

    <!-- Message at the bottom of screen-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/msg_margin_bottom"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/thirdMsgTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phoneIconEnd"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/msg_margin_bottom"
            android:gravity="center_horizontal"
            android:layout_marginBottom="@dimen/msg_title_spacing"
            android:text="@string/page_three_msg_title"
            android:textColor="@color/brand_color"
            android:textSize="@dimen/msg_text_title"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:id="@+id/thirdMsgOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/thirdMsgTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/msg_margin_bottom"
            android:gravity="center_horizontal"
            android:text="@string/page_three_msg_one"
            android:textSize="@dimen/msg_text_size"
            android:visibility="visible" />

        <TextView
            android:id="@+id/thirdMsgTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/thirdMsgOne"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/spacing_between_lines"
            android:gravity="center_horizontal"
            android:text="@string/page_three_msg_two"
            android:textSize="@dimen/msg_text_size"
            android:visibility="visible" />

        <TextView
            android:id="@+id/thirdMsgThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/thirdMsgTwo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/spacing_between_lines"
            android:gravity="center_horizontal"
            android:text="@string/page_three_msg_three"
            android:textSize="@dimen/msg_text_size"
            android:visibility="visible" />

    </LinearLayout>

</RelativeLayout>